--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0          http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.example</groupId>
 	<artifactId>sample-example</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>Simple maven artifactory plugin project</name>
 
@@ -17,7 +17,7 @@
 		<connection>scm:git:https://github.com/nikhilkapleshwari/my-rest-api.git</connection>
 		<url>https://github.com/nikhilkapleshwari/my-rest-api.git</url>
 		<developerConnection>scm:git:https://github.com/nikhilkapleshwari/my-rest-api.git</developerConnection>
-		<tag>sample-example-0.0.1</tag>
+		<tag>sample-example1-0.0.1</tag>
 	</scm>
 	
 	<dependencies>
