--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.example</groupId>
 	<artifactId>sample-example</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Simple maven artifactory plugin project</name>
 
@@ -14,9 +14,9 @@
 	</properties>
 
 	<scm>
-		<connection>scm:git:https://github.com/nikhilkapleshwari/my-rest-api.git</connection>
-		<url>https://github.com/nikhilkapleshwari/my-rest-api.git</url>
-		<developerConnection>scm:git:https://github.com/nikhilkapleshwari/my-rest-api.git</developerConnection>
+		<connection>scm:git:https://github.com/nikhilkapleshwari/sample-example.git</connection>
+		<url>https://github.com/nikhilkapleshwari/sample-example.git</url>
+		<developerConnection>scm:git:https://github.com/nikhilkapleshwari/sample-example.git</developerConnection>
 		<tag>sample-example1-0.0.1</tag>
 	</scm>
 	
