--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.example</groupId>
 	<artifactId>sample-example</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Simple maven artifactory plugin project</name>
 
@@ -17,7 +17,7 @@
 		<connection>scm:git:https://github.com/nikhilkapleshwari/sample-example.git</connection>
 		<url>https://github.com/nikhilkapleshwari/sample-example.git</url>
 		<developerConnection>scm:git:https://github.com/nikhilkapleshwari/sample-example.git</developerConnection>
-		<tag>sample-example2-0.0.1</tag>
+		<tag>sample-example1-0.0.1</tag>
 	</scm>
 	
 	<dependencies>
