--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<maven.compiler.target>1.6</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<scm>
@@ -72,8 +72,8 @@
 							</artifactory>
 							<publisher>
 								<contextUrl>http://localhost:8081/artifactory</contextUrl>
-								<username>admin</username>
-								<password>Password@12345</password>
+								<username>${username}</username>
+								<password>${password}</password>
 								<excludePatterns>*-tests.jar</excludePatterns>
 								<repoKey>libs-release-local</repoKey>
 								<snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
